// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Step Component Should match the snapshot 1`] = `
<li
  className="Step__ProgressStep-jVQefS looJRz"
>
  <p
    className="Step__Title-kjpidS khCQIZ"
  >
    Step 1
  </p>
  
</li>
`;

exports[`Step Component Should match the snapshot with icon 1`] = `
<li
  className="Step__ProgressStep-jVQefS looJRz"
>
  <p
    className="Step__Title-kjpidS khCQIZ"
  >
    Step 1
  </p>
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-1 Step__StepIcon-iGDfaE diAQUz"
    status=""
    style={
      Object {
        "color": "",
      }
    }
  >
    person
  </span>
</li>
`;

exports[`Step Component Should match the snapshot with status active 1`] = `
<li
  className="Step__ProgressStep-jVQefS donhdm"
>
  <p
    className="Step__Title-kjpidS khCQIZ"
  >
    Step 1
  </p>
  
</li>
`;

exports[`Step Component Should match the snapshot with status done 1`] = `
<li
  className="Step__ProgressStep-jVQefS OUROv"
>
  <p
    className="Step__Title-kjpidS khCQIZ"
  >
    Step 1
  </p>
  
</li>
`;
